tests/ui/attributes/builtin-attribute-prefix.stderr
error[E0433]: cannot find module or crate `stable` in this scope
  --> $DIR/builtin-attribute-prefix.rs:7:12
   |
LL | struct S(#[stable::skip] u8, u16, u32);
   |            ^^^^^^ use of unresolved module or unlinked crate `stable`

error[E0433]: cannot find module or crate `must_use` in this scope
  --> $DIR/builtin-attribute-prefix.rs:2:3
   |
LL | #[must_use::skip]
   |   ^^^^^^^^ use of unresolved module or unlinked crate `must_use`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
